--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,12 @@ dependencies {
 
 	// Mod Menu
 	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
+	modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
 
-	// Uncomment the following line to enable the deprecated Fabric API modules. 
+//	modLocalRuntime(files("build/libs/authme-8.0.0+1.20.2.jar"))
+//	modLocalRuntime(files("build/libs/cloth-config-12.0.109-fabric.jar"))
+
+	// Uncomment the following line to enable the deprecated Fabric API modules.
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
