--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,8 @@ dependencies {
 	// Mixin Extras
 	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.2.1")))
 
-//	modLocalRuntime("maven.modrinth:auth-me:8.0.0+1.20.2")
+//	modLocalRuntime(files("build/libs/authme-8.0.0+1.20.2.jar"))
+//	modLocalRuntime(files("build/libs/sodium-fabric-mc1.20.2-0.5.3.jar"))
 //	modLocalRuntime(files("build/libs/cloth-config-12.0.109-fabric.jar"))
 
 	// Uncomment the following line to enable the deprecated Fabric API modules.
